Sun Dec 30 06:31:11 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* encoding.c (Init_encoding): register Windows-31J and its alias.
	  [ruby-dev:32843]

	* ruby.c (proc_options): -Ks options means Windows-31J, not Shift_JIS.

Sun Dec 30 06:27:38 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (depend_rules): need to convert `/' to `\' for windows
	  native commands.

Sun Dec 30 01:43:56 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/Makefile.in (DLDFLAGS): like as extensions.  [ruby-core:14567]

Sat Dec 29 23:48:13 2007  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fflush): don't retry when wbuf modified by other threads.

Sat Dec 29 22:44:30 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_regsub): returns the given string itself if nothing
	  changed.

	* string.c (rb_str_sub_bang): keeps code-range as possible.

	* string.c (str_gsub): adjusts code-range.  [ruby-core:14566]

Sat Dec 29 21:54:37 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (clean, distclean, realclean): should include clean-enc
	  and others.  [ruby-dev:32887]

Sat Dec 29 13:29:29 2007  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/test_knownbug.rb: add a test reported by 
	  Kazuhiro NISHIYAMA.  [ruby-dev:32819].
	  add a test reported by Frederick Cheung.  [ruby-core:14556].

	* test/ruby/test_m17n.rb (test_gsub): add a test reported by
	  Sam Ruby.  [ruby-core:14566]

Sat Dec 29 04:46:58 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/test/unit/assertions.rb (Test::Unit::Assertions#assert_throws):
	  throw won't raise NameError nor ThreadError but ArgumentError on 1.9.
	  (Test::Unit::Assertions#assert_not_throws): ditto.

	* test/testunit/test_assertions.rb: add assertions for throwing some
	  objects other than Symbol.

Sat Dec 29 03:10:12 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (io_unread): fix typo.

Sat Dec 29 02:18:45 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (io_unread): adhoc workaround for non-binary mode of some DOSish